Update SAP section, color shadows

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       <li><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></li>
       <li><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
       <li><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
+      <li><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></li>
     </ul>
     <div class="whiteSlideSwitch noSelect"><span class="switchElement"></span></div>
   </div>
@@ -208,6 +209,7 @@
               <span class="button big actionButton black cropLeft fromBottom ae-2"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
               <span class="button big actionButton black margin-left-1 fromBottom ae-3"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
               <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
+              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
             </li>
             <li class="col-6-12 left ae-2">
               <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead the global design team for the New Ventures &amp; Technologies organization at SAP.&nbsp;&nbsp;We are on a mission to future-proof the company through product incubation and technology innovation.</span></p>
@@ -259,7 +261,7 @@
             </li>
             <li class="col-6-12 left">
               <!-- <p class="large weight-4 ae-4 fromBottom"><span class="opacity-8">I led the product & design team for the SAP.iO Venture Studio. Think of the Studio as an internal startup incubator for SAP. I managed a global team of designers, data scientists, and quality assurance specialists to build experiences for the enterprise at startup speed.  I'm also an individual contributor, responsible for the brand and product design for our newly invested ventures.  The work showcased here is my work, the work you see in production is my team's work.</span></p> -->
-              <p class="large weight-4 ae-4 fromBottom"<span class="opacity-8">I've been focused on achieving three goals.  First, to create a strong design team with a creative culture and passion for delivering excellent product experiences for our customers.  Second, to influence and impact design at one of the largest enterprise software companies in the world.  And third, to help scale our organization from 7 to over 350 in 3 years.</span></p>
+              <p class="large weight-4 ae-4 fromBottom"<span class="opacity-8">At SAP, I've been focused on achieving three goals.  First, to create a strong design team with a creative culture and passion for delivering excellent product experiences for our customers.  Second, to influence and impact design at one of the largest enterprise software companies in the world.  And third, to help scale our organization from 7 to over 350 in 3 years.</span></p>
             </li>
           </ul>
         </div>
@@ -280,38 +282,38 @@
               <img src="assets/img/nvt-logo@2x.png" class="wide rounded margin-bottom-2 ae-8" data-slider-id="75" data-slider-action="5" alt="Image"/>
             </li> -->
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter">
-              <a href="https://sap.io/" class="box-74" style="background:#465E75;">
+              <a href="https://sap.io/" class="box-74 newMangoShadow" style="background:#ffb300;">
                 <div class="thumbnail-74">
                   <img src="assets/img/io-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="0" alt="SAP.iO"/>
                 </div>
               </a>
-              <a href="#ruum" class="box-74" style="background:#1C90FF;">
+              <a href="#ruum" class="box-74 newBlueShadow" style="background:#1C90FF;">
                 <div class="thumbnail-74">
                   <img src="assets/img/ruum-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="1" alt="Ruum"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-4">
-              <a href="#dabra" class="box-74" style="background:#01CEAC">
+              <a href="#dabra" class="box-74 newTealShadow" style="background:#01CEAC">
                 <div class="thumbnail-74">
                   <img src="assets/img/dabra-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="2" alt="Dabra"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-5">
-              <a href="#atlas" class="box-74" style="background:#5D36FF">
+              <a href="#atlas" class="box-74 newIndigoShadow" style="background:#5D36FF">
                 <div class="thumbnail-74">
                   <img src="assets/img/atlas-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="3" alt="Atlas"/>
                 </div>
               </a>
-              <a href="#brilliant" class="box-74" style="background:#ffb300">
+              <a href="#icons" class="box-74 newPinkShadow" style="background:#F31CEC">
                 <div class="thumbnail-74">
-                  <img src="assets/img/brilliant-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="4" alt="Brilliant"/>
+                  <img src="assets/img/icons-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="4" alt="Brilliant"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-6">
-              <a href="#spotlight" class="box-74" style="background:#002A86">
+              <a href="#spotlight" class="box-74 newGreyShadow" style="background:#334659">
                 <div class="thumbnail-74">
                   <img src="assets/img/spotlight-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="5" alt="Spotlight"/>
                 </div>
@@ -374,9 +376,9 @@
                 <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.ruumapp.com">ruumapp.com</a></span></p> -->
                 <p class="ae-4 fromBottom large">Ruum is built with Angular and designed for mobile and primarily desktop use when it comes to building flexible project templates, assigning and managing tasks and timelines, as well as modeling new business processes.  I created the initial concepts and worked with developers in Berlin to release their beta.</p>
                 <p class="ae-5 fromBottom large margin-bottom-4">Once Ruum was off to the races, I helped hire incredible designers in Matthias Stegmueller, Iulia Shkatova, and Sarah Mautsch.  My favorite aspect about Ruum is it's clean and simple interface to collaborate with team members in real time on all kinds of different types of projects.</p>
-                <a class="button newBlue rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white rounded ae-7 fromBottom wideForPhone newBlueText" href="https://www.ruumapp.com/careers">We're Hiring!</a>
-                <a class="button white rounded ae-8 fromBottom wideForPhone newBlueText">Learn More</a>
+                <a class="button newBlue newBlueShadow rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button white newBlueShadow rounded ae-7 fromBottom wideForPhone newBlueText" href="https://www.ruumapp.com/careers">We're Hiring!</a>
+                <a class="button white newBlueShadow rounded ae-8 fromBottom wideForPhone newBlueText">Learn More</a>
               </div>
             </li>
             <li class="col-6-12">
@@ -407,8 +409,8 @@
                 <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.dabra.ai">dabra.ai</a></span></p> -->
                 <p class="ae-4 fromBottom large">Dabra is built with Vue.js and designed for mobile and desktop use when it comes to preparing, facilitating, and synthesizing meetings.  I created the initial concepts for the application and worked with developers in Tel Aviv to release their beta.</p>
                 <p class="ae-5 fromBottom large margin-bottom-4">Once Dabra was up and running, I hired incredible designers in Javier Yep and Daniel Jacoby to bring Dabra to the next level.  My favorite aspect about Dabra is the ability to view the notes history of my conversations - it's particularly helpful when having performance discussions.</p>
-                <a class="button newTeal rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white newTealText rounded ae-7 fromBottom wideForPhone">Learn More</a>
+                <a class="button newTeal newTealShadow rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button white newTealShadow newTealText rounded ae-7 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
             <li class="col-6-12">
@@ -467,8 +469,8 @@
               <!-- <p class="ae-3 fromBottom largest newTealText"><span class="bold">Have focused &amp; productive 1:1 meetings while building trust with the people you work with.</span></p> -->
               <p class="ae-4 fromBottom large">This project started out as a creative outlet on my commute to and from San Francisco - a simple redesign of Google's <a href="https://material.io/resources/icons/?style=baseline" class="bold">Material Design Icons</a> using the style of <a href="https://feathericons.com/" class="bold">Feather Icons</a>.</p>
               <p class="ae-5 fromBottom large margin-bottom-4">After many trips on the train, the icon set has grown to more than 1,500 icons covering all of SAP's <a href="https://sapui5.hana.ondemand.com/sdk/test-resources/sap/m/demokit/iconExplorer/webapp/index.html#/overview/SAP-icons" class="bold">Fiori Icons</a> in addition to the Material Design icon set.  The main challenge was creating a set of ingredients (2px stroke, minimal fill shapes, etc) in order to scale the set across all of SAP for easy collaboration.</p>
-              <a class="button newMango rounded ae-6 fromBottom cropLeft wideForPhone">View the Full Set</a>
-              <a class="button white newMangoText rounded ae-7 fromBottom wideForPhone">Learn More</a>
+              <a class="button newMango newMangoShadow rounded ae-6 fromBottom cropLeft wideForPhone">View the Full Set</a>
+              <a class="button white newMangoShadow newMangoText rounded ae-7 fromBottom wideForPhone">Learn More</a>
             </li>
             <li class="col-1-12"></li>
             <li class="col-6-12 left relative ae-1 fade-6In">
@@ -506,7 +508,7 @@
               <p class="ae-3 fromBottom largest newIndigoText"><span class="bold">A geospatial analytics platform built to make data-driven decisions easy for everyone.</span></p>
               <p class="ae-4 fromBottom large">Atlas was built with Vue.js and most interactions were tied tightly to Mapbox when it came to manipulating the map and viewing a variety of data visualization types in 2D and 3D.  I created the initial concepts and worked with the developers in San Francisco to release their beta.</p>
               <p class="ae-5 fromBottom large margin-bottom-4">Once Atlas was available for productive use, I hired Lucia Melgarejo and David Shen to explore how we can visualize geospatial data over time across multiple layers.  Unfortunately after a couple years, it was clear we wouldn't find a product market fit, so we decided to go through the painful process of sunsetting the venture.</p>
-              <a class="button newIndigo rounded ae-6 fromBottom cropLeft wideForPhone">Learn More</a>
+              <a class="button newIndigo newIndigoShadow rounded ae-6 fromBottom cropLeft wideForPhone">Learn More</a>
             </li>
             <li class="col-5-12 toRight left ae-1 fromBottom">
               <img class="ipad-32 ae-1 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="1080" src="assets/img/atlas@2x.png" alt="Atlas Concept Designs" data-action="zoom"/>
@@ -534,8 +536,8 @@
               <p class="ae-3 fromBottom largest newGreyText"><span class="bold">Actionable operations insights from all your enterprise business systems.</span></p>
               <p class="ae-4 fromBottom large">Spotlight is built with Vue.js and designed for primarily desktop use when it comes to monitoring business process, comparing metrics to industry standards, and tracking operational improvements over time.  I created the initial concepts and worked with developers in Berlin to release their alpha.</p>
               <p class="ae-5 fromBottom large margin-bottom-4">Once Spotlight was released as a pilot to early customers, I transitioned the work to David Shen and Laura Ileana Ramirez Rivera.  My favorite aspect about Spotlight is it's ability to analyze all processes in a single view, allowing COOs to make data-driven decisions on "what to fix first."</p>
-              <a class="button newGrey rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-              <a class="button white newGreyText rounded ae-7 fromBottom wideForPhone">Learn More</a>
+              <a class="button newGrey newGreyShadow rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+              <a class="button white newGreyShadow newGreyText rounded ae-7 fromBottom wideForPhone">Learn More</a>
             </li>
             <li class="col-6-12 left ae-1 fromBottom">
               <img class="ipad-32 ae-1 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="1080" styles="margin:-40% 0" src="assets/img/spotlight@2x.png" alt="Spotlight Concept Designs" data-action="zoom"/>
@@ -561,10 +563,11 @@
             <li class="col-6-12 left middle">
               <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
                 <h1 class="xl margin-bottom-2 ae-1 newWhiteText fromBottom">Flipboard</h1>
+                <!-- <p class="ae-3 fromBottom largest newWhiteText"><span class="bold">It's your time - discover and share the stories that shape your world.</span></p> -->
                 <p class="ae-3 fromBottom large newWhiteText">I came to Flipboard to learn everything there was about product design for mobile apps at scale.  I learned that the prototype is king and that a good designer iterates through as many completely different concepts as possible in order to arrive at something special.  I also learned my job as a designer is to essentially rip out anything superfluous in the interface until the experience breaks.</p>
                 <p class="ae-4 fromBottom large margin-bottom-4 newWhiteText">I worked on a variety of features across mobile, tablet, and web in a few key areas including user on-boarding, curation, community, and growth.  I joined at about 80 people and witnessed explosive growth in both our monthly active users as well as employees - both doubling during the time I was there.</p>
-                <a class="button newRed rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
+                <a class="button newRed newRedShadow rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button white newRedShadow rounded ae-6 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
             <!-- <li class="col-6-12">
@@ -592,8 +595,8 @@
                 <h1 class="xl margin-bottom-2 ae-2 fromBottom newGreenText">Peapod</h1>
                 <!-- <p class="ae-3 fromBottom largest newGreenText padding-right-4"><span class="bold">Grocery shop from anywhere. Delivery on your schedule.</span></p>                 -->
                 <p class="ae-5 fromBottom large margin-bottom-4">I began my career at Peapod as a business analyst working on web applications for their loyalty program.  After managing the release of multiple hybrid mobile apps, I took the lead product management role for the core eCommerce platform and also served as the sole product designer.  With the support and mentorship from the CEO and CTO, I moved to the Bay Area to pursue my freshly formed passion in product design.</p>
-                <a class="button newGreen rounded ae-6 fromBottom cropLeft wideForPhone">Start Shopping</a>
-                <a class="button white newGreenText rounded ae-8 fromBottom wideForPhone">Learn More</a>
+                <a class="button newGreen newGreenShadow rounded ae-6 fromBottom cropLeft wideForPhone">Start Shopping</a>
+                <a class="button white newGreenShadow newGreenText rounded ae-8 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
             <li class="col-1-12"></li>
@@ -650,7 +653,7 @@
               <h1 class="xl margin-bottom-2 ae-2 fromBottom">Motorola</h1>
               <p class="ae-3 fromBottom largest padding-right-4"><span class="bold">s305 wins LAPTOP’s Best of CTIA Wireless 2009 Award for Accessories</span></p>
               <p class="ae-5 fromBottom large margin-bottom-4">My first job out of school was a dream job - I got to play around with the latest Bluetooth hardware technologies while learning about developing business cases for a variety of products, including wireless speakers and headphones.  I was also lucky enough to travel to Shenzhen to manage the production of my first product, the S305.</p>
-              <a class="button white rounded ae-6 fromBottom cropLeft wideForPhone" href="https://www.amazon.com/Motorola-S305-Bluetooth-Stereo-Headphones/dp/B002IS1O84?ref_=fsclp_pl_dp_2">Buy One</a>
+              <a class="button white newGreyShadow rounded ae-6 fromBottom cropLeft wideForPhone" href="https://www.amazon.com/Motorola-S305-Bluetooth-Stereo-Headphones/dp/B002IS1O84?ref_=fsclp_pl_dp_2">Buy One</a>
             </li>
           </ul>
         </div>
