--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
               <span class="button big actionButton black cropLeft fromBottom ae-2"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
               <span class="button big actionButton black margin-left-1 fromBottom ae-3"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
               <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
             </li>
             <li class="col-6-12 left ae-2">
               <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead the global design team for the New Ventures &amp; Technologies organization at SAP.&nbsp;&nbsp;We are on a mission to future-proof the company through product incubation and technology innovation.</span></p>
@@ -464,29 +463,59 @@
 
 </section>
 
-<!-- Slide #55 -->
-<section class="slide whiteSlide" data-name="contact">
+<!-- End -->
+<section class="slide black webgl" data-name="thanks">
   <div class="content">
     <div class="container">
       <div class="wrap">
 
         <div class="fix-12-12 left">
           <ul class="flex later">
-            <li class="col-6-12 left margin-bottom-4 ae-2">
-              <h1 class="xl margin-bottom-2 ae-1 fromBottom">Let's Connect</h1>
-              <span class="button big actionButton black cropLeft fromBottom ae-2"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-3"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
+            <li class="col-5-12 left ae-2">
+              <h1 class="xl ae-1 margin-bottom-1 fromBottom">Thanks!</h1>
+              <p class="ae-2 margin-bottom-2 fromBottom largest">Tap the chat icon in the lower left to send me a message, or follow me online at:</p>
+              <span class="button big actionButton black cropLeft fromBottom ae-3"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
+              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
+              <span class="button big actionButton black margin-left-1 fromBottom ae-5"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
+              <span class="button big actionButton black margin-left-1 fromBottom ae-6"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
+              <span class="button big actionButton black margin-left-1 fromBottom ae-7"><a href="https://medium.com/@ckcallen"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#medium"></use></svg></a></span>
             </li>
             <li class="col-1-12"></li>
-            <li class="col-5-12 left ae-2">
-              <form class="slides-form wide left" action="ajax-email.php" id="contact-form" method="post" data-ajax-form="true">
-                <input class="stroke wide" id="name55" type="name" name="name" placeholder="Your name" required/>
-                <input class="stroke wide margin-top-2" id="email55" type="email" name="email" placeholder="Your email" required/>
-                <textarea class="wide left margin-top-2" id="message55" type="text" name="message" placeholder="Message" required></textarea>
-                <input class="button rounded wide black margin-top-2 cropBottom" type="submit" name="submit" value="Send" data-success-text="Done!" data-success-class="green"/>
-              </form>
+            <li class="col-6-12 left ae-2">
+              <h1 class="xl ae-1 margin-bottom-1 fromBottom">&nbsp;</h1>
+              <h4 class="largest margin-bottom-4 ae-4 fromBottom">Credits</h4>
+              <ul class="flex later">
+                <li class="col-4-12 left">
+                  <p class="large ae-5 fromBottom"><span class="bolder opacity-8">HTML/CSS/JS</span></p>
+                </li>
+                <li class="col-8-12 left">
+                  <p class="large weight-4 margin-bottom-2 ae-5 fromBottom opacity-5"><a href="https://designmodo.com/slides/">Slides by Designmodo</a></p>
+                </li>
+                <li class="col-4-12 left">
+                  <p class="large ae-6 fromBottom"><span class="bolder opacity-8">3D Mockups</span></p>
+                </li>
+                <li class="col-8-12 left">
+                  <p class="large weight-4 margin-bottom-2 ae-6 fromBottom opacity-5"><a href="https://angle.sh/">Angles by Design+Code</a></p>
+                </li>
+                <li class="col-4-12 left">
+                  <p class="large ae-7 fromBottom"><span class="bolder opacity-8">Typography</span></p>
+                </li>
+                <li class="col-8-12 left">
+                  <p class="large weight-4 margin-bottom-2 ae-7 fromBottom opacity-5"><a href="https://www.myfonts.com/fonts/type-type/tt-commons/">TT Commmons by TypeType</a></p>
+                </li>
+                <li class="col-4-12 left">
+                  <p class="large ae-8 fromBottom"><span class="bolder opacity-8">Live Chat</span></p>
+                </li>
+                <li class="col-8-12 left">
+                  <p class="large weight-4 margin-bottom-2 ae-8 fromBottom opacity-5"><a href="https://www.chaport.com/">Chaport</a></p>
+                </li>
+                <li class="col-4-12 left">
+                  <p class="large ae-9 fromBottom"><span class="bolder opacity-8">WebGL</span></p>
+                </li>
+                <li class="col-8-12 left">
+                  <p class="large weight-4 ae-9 fromBottom opacity-5"><a href="https://threejs.org/examples/#webgl_points_waves">Waves in Three.js</a></p>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -494,6 +523,8 @@
       </div>
     </div>
   </div>
+  <div class="background"></div>
+
 </section>
 
 <!-- Panel Bottom #01 -->
