Remove WebGL from Thanks

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 </section>
 
 <!-- End -->
-<section class="slide black webgl" data-name="thanks">
+<section class="slide whiteSlide" data-name="thanks">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -474,11 +474,11 @@
             <li class="col-5-12 left ae-2">
               <h1 class="xl ae-1 margin-bottom-1 fromBottom">Thanks!</h1>
               <p class="ae-2 margin-bottom-2 fromBottom largest">Tap the chat icon in the lower left to send me a message, or follow me online at:</p>
-              <span class="button big actionButton black cropLeft fromBottom ae-3"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-5"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-6"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
-              <span class="button big actionButton black margin-left-1 fromBottom ae-7"><a href="https://medium.com/@ckcallen"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#medium"></use></svg></a></span>
+              <span class="button big actionButton stroke text-black cropLeft cropRight margin-right-1 fromBottom ae-3"><a href="https://www.linkedin.com/in/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></a></span>
+              <span class="button big actionButton stroke text-black cropLeft cropRight margin-right-1 fromBottom ae-4"><a href="https://www.instagram.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></span>
+              <span class="button big actionButton stroke text-black cropLeft cropRight margin-right-1 fromBottom ae-5"><a href="https://www.twitter.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
+              <span class="button big actionButton stroke text-black cropLeft cropRight margin-right-1 fromBottom ae-6"><a href="https://www.dribbble.com/ckcallen/"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></span>
+              <span class="button big actionButton stroke text-black cropLeft cropRight margin-right-1 fromBottom ae-7"><a href="https://medium.com/@ckcallen"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#medium"></use></svg></a></span>
             </li>
             <li class="col-1-12"></li>
             <li class="col-6-12 left ae-2">
