Compress Peapod mp4

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <li class="col-6-12">
               <div class="embedVideo rounded size-4x3 ae-1 margin-bottom-phone-4 margin-bottom-phablet-4 margin-bottom-tablet-4 middle">
                 <video poster="assets/img/peapod@2x.jpg" autoplay loop muted webkit-playsinline playsinline>
-                  <source src="assets/video/peapod.mp4" type="video/mp4">
+                  <source src="assets/video/peapod-md.mp4" type="video/mp4">
                 </video>
               </div>
             </li>
