Update first two pages
Update content on home with new title and description, and update content on SAP page with updated goals.

--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
               <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.twitter.com/ckcallen/" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
             </li>
             <li class="col-6-12 left ae-2">
-              <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead the global design team for the New Ventures &amp; Technologies organization at SAP.&nbsp;&nbsp;We are on a mission to future-proof the company through product incubation and technology innovation.</span></p>
-              <p class="hideForPhone largest weight-4 ae-5 fromBottom"><span class="opacity-5">When I'm not running around the office, I'm exploring the Bay Area with my family, playing fetch with my cattle dog, or chasing my 3 year old daughter around the backyard like a hooligan.</span></p>
-              <p class="showForPhone large weight-5 ae-4 fromBottom" style="display:none"><span class="opacity-8">I lead the global design team for the New Ventures &amp; Technologies organization at SAP.&nbsp;&nbsp;We are on a mission to future-proof the company through product incubation and technology innovation.</span></p>
-              <p class="showForPhone large weight-4 ae-5 fromBottom" style="display:none"><span class="opacity-5">When I'm not running around the office, I'm usually chasing my 3 year old daughter around the backyard like a hooligan.</span></p>
+              <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead a team of 75 evolving the design language and design systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
+              <p class="hideForPhone largest weight-4 ae-5 fromBottom"><span class="opacity-5">When I'm not working from my home office, I'm exploring the DC Area with my family, playing fetch with my cattle dog, or chasing my two daughters around the backyard like a hooligan.</span></p>
+              <p class="showForPhone large weight-5 ae-4 fromBottom" style="display:none"><span class="opacity-8">I lead a team of 75 evolving the design language and design systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
+              <p class="showForPhone large weight-4 ae-5 fromBottom" style="display:none"><span class="opacity-5">When I'm not working from my home office, I'm exploring the DC Area with my family, playing fetch with my cattle dog, or chasing my two daughters around the backyard like a hooligan.</span></p>
             </li>
           </ul>
 
           <ul class="flex later margin-top-8">
             <li class="col-3-12 left ae-6">
               <h6 class="larger weight-6"><a href="#sap">SAP</a></h6>
-              <p class="large opacity-4 weight-5">Head of Design, NVT<br/><span class="weight-4 opacity-5">2016-Present</span></p>
+              <p class="large opacity-4 weight-5">VP, SAP Design Systems<br/><span class="weight-4 opacity-5">2016-Present</span></p>
             </li>
             <li class="col-3-12 left ae-7">
               <h6 class="larger weight-6"><a href="#flipboard">Flipboard</a></h6>
@@ -167,7 +167,7 @@
               <p class="largest weight-5 ae-3 fromBottom"><span class="opacity-4">September 2016 - Today</span></p>
             </li>
             <li class="col-6-12 left">
-              <p class="large weight-4 ae-4 fromBottom"<span class="opacity-8">At SAP, I've been focused on three goals.  First, to create a strong design team with a creative culture and passion for delivering excellent product experiences for our customers.  Second, to influence and impact design at one of the largest enterprise software companies in the world.  And third, to help scale our organization from 7 to over 350 in 3 years.</span></p>
+              <p class="large weight-4 ae-4 fromBottom"<span class="opacity-8">At SAP, I've been focused on three goals.  First, to create a strong design team with a creative culture &amp; passion for delivering excellent product experiences.  Second, to directly impact design at one of the largest enterprise software companies in the world.  And third, to bring together the Product teams with the Brand &amp; Marketing teams to establish a singular SAP identity.</span></p>
             </li>
           </ul>
         </div>
