--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Chris Allen</title>
     <meta property="og:title" content="Portfolio of Chris Allen" />
     <meta name="twitter:title" content="Portfolio of Chris Allen" />
-    <meta name="description" content="Personal website and portfolio for Chris Allen, the Head of Design for SAP New Ventures &amp; Technologies based in San Francisco." />
-    <meta name="og:description" content="Personal website and portfolio for Chris Allen, the Head of Design for SAP New Ventures &amp; Technologies based in San Francisco." />
-    <meta name="twitter:description" content="Personal website and portfolio for Chris Allen, the Head of Design for SAP New Ventures &amp; Technologies based in San Francisco." />
+    <meta name="description" content="Personal website and portfolio for Chris Allen, VP of SAP Design Language and Systems based in Washington DC." />
+    <meta name="og:description" content="Personal website and portfolio for Chris Allen, VP of SAP Design Language and Systems based in Washington DC." />
+    <meta name="twitter:description" content="Personal website and portfolio for Chris Allen, VP of SAP Design Language and Systems based in Washington DC." />
     <meta name="og:image" content="assets/uploads/chris-allen-social.png?p=RSHGb1lk" />
     <meta name="twitter:image" content="assets/uploads/chris-allen-social.png?p=RSHGb1lk" />
 
@@ -120,9 +120,9 @@
               <span class="button big actionButton black margin-left-1 fromBottom ae-4"><a href="https://www.twitter.com/ckcallen/" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></span>
             </li>
             <li class="col-6-12 left ae-2">
-              <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead a team of 75 evolving the design language and design systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
+              <p class="hideForPhone largest weight-5 ae-4 fromBottom"><span class="opacity-8">I lead a team of 75 evolving the design language and systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
               <p class="hideForPhone largest weight-4 ae-5 fromBottom"><span class="opacity-5">When I'm not working from my home office, I'm exploring the DC Area with my family, playing fetch with my cattle dog, or chasing my two daughters around the backyard like a hooligan.</span></p>
-              <p class="showForPhone large weight-5 ae-4 fromBottom" style="display:none"><span class="opacity-8">I lead a team of 75 evolving the design language and design systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
+              <p class="showForPhone large weight-5 ae-4 fromBottom" style="display:none"><span class="opacity-8">I lead a team of 75 evolving the design language and systems for all SAP products while spearheading the effort to transform a centralized organization to a federated ecosystem of design teams.</span></p>
               <p class="showForPhone large weight-4 ae-5 fromBottom" style="display:none"><span class="opacity-5">When I'm not working from my home office, I'm exploring the DC Area with my family, playing fetch with my cattle dog, or chasing my two daughters around the backyard like a hooligan.</span></p>
             </li>
           </ul>
